<resources>
<string name="app_name">OsMoDroid</string>
<string name="start">Start</string>
<string name="stop">Stop</string>
<string name="serviceStatus">State:</string>
<string name="location">Location:</string>
<string name="sends">Status:</string>
<string name="url">Address:</string>
<string name="settings">Settings</string>
<string name="period">Sampling GPS</string>
<string name="succes">Successfully</string>
<string name="error">Error: </string>
<string name="Sputniki">Satellites: </string>
<string name="GlonasFindString"> uses Glonass</string>
<string name="NoConnection">No connection</string>
<string name="Unknow">Unknown</string>
<string name="NotDefined">Undefined</string>
<string name="Sended">Sending: </string>
<string name="Adres">Address: </string>
<string name="RepeatAuth">Reset login data</string>
<string name="warnhash">Could not get key from Server, check DataConnection or contact with support</string>
<string name="Settings">Settings</string>
<string name="EqualsParameters">Equate settings</string>
<string name="AgreeRepeatAuth">Confirm re-authorization request</string>
<string name="ChangeAdresMonitor">This changes the monitoring address!</string>
<string name="yes">Yes</string>
<string name="No">No</string>
<string name="AgreeParameterEqual">Confirm equating transmission parameters and recording</string>
<string name="TrackRecordParameterChanges">Track recording parameters will change</string>
<string name="Running">Launched</string>
<string name="NotRunning">Not launched</string>
<string name="Status">Status: </string>
<string name="Sendcount">Sent: </string>
<string name="ErrorRecieve">Error retrieving</string>
<string name="AuthWait">Requesting authorization; please wait ...</string>
<string name="CheckInternet">Failed to authenticate. Check your data connection.</string>
<string name="CanNotWriteHeader">Could not save track to your memory card.</string>
<string name="CanNotWriteEnd">Could not finish saving track to your memory card.</string>
<string name="SendCourseChange">Change the transmission rate: </string>
<string name="TrackCourseChange">Changing course track: </string>
<string name="ServerError">Server Error</string>
<string name="buffer">Buffer: </string>
<string name="request">Requesting authorization, please wait ...</string>
<string name="noappcode">Empty password</string>
<string name="nokey">Authorization failed (nokey)</string>
<string name="getkey">Authorized</string>
<string name="getadres">Get Address</string>
<string name="getdevice">Get device</string>
<string name="enterchanel">Enter into channel</string>
<string name="SimLinkButtonText">Update</string>
<string name="addsymlink">Add link</string>
<string name="symlink">My Links</string>
<string name="sendnow">Send Now</string>
<string name="message">Message</string>
<string name="sendsupport">Report to support</string>
<string name="about">About</string>
<string name="abouttext">OsMoDroid is a location monitoring client for Android. Using a smartphone and the OsMo service, your friends and family can always know where you are.\nMain developer: Denis Fokin (c) 2012-2015\n\nBy using this application, you accept the Terms of Use at http://osmo.mobi/terms\n\nSite OsMoDroid: http://osmodroid.mobi\n\nCopyright information http://osmodroid.mobi/copyright.html</string>
<string name="send">>></string>
<string name="cancel">Cancel</string>
<string name="speed">Speed: km/h</string>
<string name="auth">Authorization</string>
<string name="nomapapp">No Maps-like application appears to be installed.</string>
<string name="showonmap">Shown on the map</string>
<string name="chanal">Group </string>
<string name="refresh">Update</string>
<string name="coordinats">Location: </string>
<string name="Distantion">Range: </string>
<string name="Km"> Km</string>
<string name="m"> m </string>
<string name="chanals">Groups</string>
<string name="yourmessage">Your message: </string>
<string name="sendingmessage">Sending a message</string>
<string name="sharelink">Share</string>
<string name="deviceslis">Messages</string>
<string name="messagetochanal">Message to the group</string>
<string name="copylink">Copy this link</string>
<string name="openinbrowser">Open in Browser</string>
<string name="exitfromchanal">Leave group</string>
<string name="createchanel">Create group</string>
<string name="enterchanal">Join the group</string>
<string name="chanalname">Name:</string>
<string name="chanalcode">ID:</string>
<string name="privatechanal">Private group</string>
<string name="chanalkey">Group key</string>
<string name="createchanal">Group register here</string>
<string name="noallenter">Does not include all data</string>
<string name="bindtochanal">Connection to the group</string>
<string name="requestdevicebefore">Prior request device</string>
<string name="chatwith">Chat with </string>
<string name="devices">Devices</string>
<string name="writemessage">Write message</string>
<string name="messages">Messages</string>
<string name="binddevice">Bind device</string>
<string name="esya_ru_notrespond">OsMoDroid can\'t access the server</string>
<string name="tracker">Tracker</string>
<string name="links">Links</string>
<string name="tracks">Tracks</string>
<string name="notifications">Notifications</string>
<string name="stat">Statistics</string>
<string name="appauth">Authorization Application</string>
<string name="inbuffer">Buffered: </string>
<string name="authpleasewait">Requesting authorization, please wait ...</string>
<string name="commandpleasewait">Executed command; please wait ...</string>
<string name="resultenterchanalnoget">Did not receive a server reply to the channel entrance request</string>
<string name="linksnotget">Links could not be retrieved</string>
<string name="noanswerfromserver">No response from the server</string>
<string name="urlnoget">Unable to get URL</string>
<string name="prefsaved">Settings saved on the memory card</string>
<string name="prefloaded">Settings read from the memory card</string>
<string name="started">Running</string>
<string name="stoped">Stopped</string>
<string name="monitoringondevice">Monitoring on the device \"</string>
<string name="enternet">Entered the network</string>
<string name="exitnet">Left the network</string>
<string name="device">The device \"</string>
<string name="accuracy">Accuracy: </string>
<string name="maximal">Max: </string>
<string name="kmch">km/h</string>
<string name="average">Average: </string>
<string name="going">Distance: </string>
<string name="km"> km </string>
<string name="worktime">Running time:</string>
<string name="observers">Observers</string>
<string name="monitoringstarted">Monitoring started</string>
<string name="monitoringactive">Monitoring is active</string>
<string name="tracktoshort">The file will not be saved or uploaded because the track is too short (less than 1 KB).</string>
<string name="osmodroiduploadfile">OsMoDroid File upload</string>
<string name="commansendlocation">Command: Sending position </string>
<string name="letsgo">Lets go!</string>
<string name="comand">Command: </string>
<string name="errorcode"> Error code: </string>
<string name="detalisation"> Explanation: </string>
<string name="query">Query: </string>
<string name="versionosmodroid">OsMoDroid version:</string>
<string name="dayssend">shipments per day:</string>
<string name="monthsends">shipments per month:</string>
<string name="exit">Exit</string>
<string name="savepref">Save Settings on the memory card</string>
<string name="loadpref">Load settings from the memory card</string>
<string name="more">More</string>
<string name="iamhere">I\'m right here!</string>
<string name="linkcopied">Link copied to clipboard</string>
<string name="Stoping">Stop</string>
<string name="closesession">Close session?</string>
<string name="loading">Loading...</string>
<string name="uploadtrera">Upload to TReRa ?</string>
<string name="servermessage">Message from the server</string>
<string name="deletelink">Remove link</string>
<string name="uploadtotrera">Upload to TReRa</string>
<string name="delete">Delete</string>
<string name="channelsend">Send to channels</string>
<string name="alarm">Alarm</string>
<string name="recivedmessages">Received messages:</string>
<string name="spd">Speed</string>
<string name="max">Max</string>
<string name="avg">Average</string>
<string name="inway">On the Way</string>
<string name="ingoing2">Distance</string>
<string name="sended">Sent</string>
<string name="writen">Recorded</string>
<string name="wekksends">Week sends:</string>
<string name="from_undefined">from anonymous</string>
<string name="map">Map</string>
<string name="drawer_open">open</string>
<string name="drawer_close">close</string>
<string name="iam">Me</string>
<string name="needgps">Need GPS Enabled</string>
<string name="enablegps">Please, enable GPS</string>
<string name="showtraces">Show traces</string>
<string name="enable_manual_rotation">Enable manual rotation</string>
<string name="enable_course_rotation">Enable course rotation</string>
<string name="copychID">Copy ID</string>
<string name="shareID">Share ID</string>
<string name="needauthtocreategroup">Need auth to create group</string>
<string name="name">Name</string>
<string name="trackerid">TrackerID</string>
<string name="shareid">Share TrackerID</string>
<string name="copytrackerid">Copy TrackerID</string>
<string name="color_dialog_title">Color Selection</string>
<string name="color_h">hue</string>
<string name="color_s">saturation</string>
<string name="color_v">value</string>
<string name="color_a">alpha</string>
<string name="unknown_location_now">Unknown location now</string>
<string name="color">Define color</string>
<string name="remote_commands">Remote Command</string>
<string name="start_monitoring">Start monitoring</string>
<string name="stop_monitoring">Stop monitoring</string>
<string name="send_tts">Send a voice message (TTS)</string>
<string name="play_alarm_on">Activate the buzzer</string>
<string name="play_alarm_off">Turn off buzzer</string>
<string name="signalisation_set_on">Activate the alarm</string>
<string name="signalisation_set_off">Turn off alarm</string>
<string name="approximate_traffic">Approximate traffic</string>
<string name="online">Online</string>
<string name="offline">Offline</string>
<string name="monitoring_on">Monitoring on</string>
<string name="monitoring_off">Monitoring off</string>
<string name="kilometers">kilometers</string>
<string name="reset">Reset</string>
<string name="where_">Where?</string>
<string name="this_device_">"This device "</string>
<string name="confirm_reset_staticstic">Confirmation statistics reset</string>
<string name="please_confirm_reset_statistic">Please confirm the reset statistics</string>
<string name="point_name_">Point name:</string>
<string name="point_create">Send point to server</string>
<string name="point_create_description">Enter name for point to send</string>
<string name="empty_channels">On this screen, you can watch the group in which you entered. To start using groups, use the context menu.</string>
<string name="empty_devices">On this screen is a list of your devices, and subscriptions to the device. Actions with the devices available in the context menu.</string>
<string name="empty_links">On this screen has a permanent reference for monitoring your device from the site. Available actions can be found in the context menu.</string>
<string name="understand">OK, Do not report bad connections more</string>
<string name="checkfirewall">Could not connect to tracker server by it port. Check what you allow OsMoDroid full access in you firewall. Also it could because bad data connection quality.</string>
<string name="size_of_point">Size of point</string>
<string name="follow_">"Follow "</string>
<string name="no_follow_">"No Follow "</string>
<string name="adjust_to_dpi">Adjust to DPI</string>
<string name="monitoring_settings">Monitoring settings</string>
</resources>